--- a/100004-必会函数.ipynb
+++ b/100004-必会函数.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "              dtype='datetime64[ns]', freq='D')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "              dtype='datetime64[ns]', freq='M')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,21 +98,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "a   -1.405603\n",
-       "b   -0.897936\n",
-       "c   -0.660885\n",
-       "d    1.755417\n",
-       "e    0.148828\n",
+       "a    0.660581\n",
+       "b    0.097539\n",
+       "c    0.411723\n",
+       "d   -1.214195\n",
+       "e    1.538296\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -164,51 +164,51 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2000-01-01</th>\n",
-       "      <td>0.459253</td>\n",
-       "      <td>-0.525373</td>\n",
-       "      <td>1.124116</td>\n",
+       "      <td>-1.555927</td>\n",
+       "      <td>1.824400</td>\n",
+       "      <td>-0.103888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-02</th>\n",
-       "      <td>0.328501</td>\n",
-       "      <td>0.742063</td>\n",
-       "      <td>-1.680669</td>\n",
+       "      <td>2.493311</td>\n",
+       "      <td>-2.218632</td>\n",
+       "      <td>-1.834097</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-03</th>\n",
-       "      <td>0.758567</td>\n",
-       "      <td>-1.359896</td>\n",
-       "      <td>0.048292</td>\n",
+       "      <td>0.014749</td>\n",
+       "      <td>-1.324293</td>\n",
+       "      <td>-1.037334</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-04</th>\n",
-       "      <td>1.553641</td>\n",
-       "      <td>0.378608</td>\n",
-       "      <td>-0.121617</td>\n",
+       "      <td>-0.727935</td>\n",
+       "      <td>-1.949508</td>\n",
+       "      <td>-2.324727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-05</th>\n",
-       "      <td>0.207323</td>\n",
-       "      <td>1.261774</td>\n",
-       "      <td>-0.545756</td>\n",
+       "      <td>1.113019</td>\n",
+       "      <td>0.030672</td>\n",
+       "      <td>-0.262045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-06</th>\n",
-       "      <td>1.352899</td>\n",
-       "      <td>0.672543</td>\n",
-       "      <td>-0.211561</td>\n",
+       "      <td>0.468949</td>\n",
+       "      <td>-1.009396</td>\n",
+       "      <td>-0.487583</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-07</th>\n",
-       "      <td>0.395342</td>\n",
-       "      <td>0.300007</td>\n",
-       "      <td>1.157092</td>\n",
+       "      <td>-0.395357</td>\n",
+       "      <td>0.599188</td>\n",
+       "      <td>-1.038343</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-08</th>\n",
-       "      <td>0.781457</td>\n",
-       "      <td>-1.404341</td>\n",
-       "      <td>0.141357</td>\n",
+       "      <td>-0.458874</td>\n",
+       "      <td>-1.032597</td>\n",
+       "      <td>0.984219</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -216,17 +216,17 @@
       ],
       "text/plain": [
        "                   A         B         C\n",
-       "2000-01-01  0.459253 -0.525373  1.124116\n",
-       "2000-01-02  0.328501  0.742063 -1.680669\n",
-       "2000-01-03  0.758567 -1.359896  0.048292\n",
-       "2000-01-04  1.553641  0.378608 -0.121617\n",
-       "2000-01-05  0.207323  1.261774 -0.545756\n",
-       "2000-01-06  1.352899  0.672543 -0.211561\n",
-       "2000-01-07  0.395342  0.300007  1.157092\n",
-       "2000-01-08  0.781457 -1.404341  0.141357"
+       "2000-01-01 -1.555927  1.824400 -0.103888\n",
+       "2000-01-02  2.493311 -2.218632 -1.834097\n",
+       "2000-01-03  0.014749 -1.324293 -1.037334\n",
+       "2000-01-04 -0.727935 -1.949508 -2.324727\n",
+       "2000-01-05  1.113019  0.030672 -0.262045\n",
+       "2000-01-06  0.468949 -1.009396 -0.487583\n",
+       "2000-01-07 -0.395357  0.599188 -1.038343\n",
+       "2000-01-08 -0.458874 -1.032597  0.984219"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,21 +246,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    0.428035\n",
-       "1    0.415150\n",
-       "2    0.345762\n",
-       "3    0.207961\n",
-       "4   -1.074859\n",
+       "0   -0.604606\n",
+       "1    0.253185\n",
+       "2    0.071653\n",
+       "3    1.726399\n",
+       "4   -0.305076\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,19 +271,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "997   -1.570035\n",
-       "998   -0.265669\n",
-       "999   -2.320876\n",
+       "997    0.063076\n",
+       "998   -0.456126\n",
+       "999   -0.460023\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -333,15 +333,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2000-01-01</th>\n",
-       "      <td>0.459253</td>\n",
-       "      <td>-0.525373</td>\n",
-       "      <td>1.124116</td>\n",
+       "      <td>-1.555927</td>\n",
+       "      <td>1.824400</td>\n",
+       "      <td>-0.103888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-02</th>\n",
-       "      <td>0.328501</td>\n",
-       "      <td>0.742063</td>\n",
-       "      <td>-1.680669</td>\n",
+       "      <td>2.493311</td>\n",
+       "      <td>-2.218632</td>\n",
+       "      <td>-1.834097</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -349,11 +349,11 @@
       ],
       "text/plain": [
        "                   A         B         C\n",
-       "2000-01-01  0.459253 -0.525373  1.124116\n",
-       "2000-01-02  0.328501  0.742063 -1.680669"
+       "2000-01-01 -1.555927  1.824400 -0.103888\n",
+       "2000-01-02  2.493311 -2.218632 -1.834097"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "              dtype='datetime64[ns]', freq='D')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "Index(['A', 'B', 'C'], dtype='object')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "Index(['a', 'b', 'c'], dtype='object')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -496,51 +496,51 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2000-01-01</th>\n",
-       "      <td>0.459253</td>\n",
-       "      <td>-0.525373</td>\n",
-       "      <td>1.124116</td>\n",
+       "      <td>-1.555927</td>\n",
+       "      <td>1.824400</td>\n",
+       "      <td>-0.103888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-02</th>\n",
-       "      <td>0.328501</td>\n",
-       "      <td>0.742063</td>\n",
-       "      <td>-1.680669</td>\n",
+       "      <td>2.493311</td>\n",
+       "      <td>-2.218632</td>\n",
+       "      <td>-1.834097</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-03</th>\n",
-       "      <td>0.758567</td>\n",
-       "      <td>-1.359896</td>\n",
-       "      <td>0.048292</td>\n",
+       "      <td>0.014749</td>\n",
+       "      <td>-1.324293</td>\n",
+       "      <td>-1.037334</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-04</th>\n",
-       "      <td>1.553641</td>\n",
-       "      <td>0.378608</td>\n",
-       "      <td>-0.121617</td>\n",
+       "      <td>-0.727935</td>\n",
+       "      <td>-1.949508</td>\n",
+       "      <td>-2.324727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-05</th>\n",
-       "      <td>0.207323</td>\n",
-       "      <td>1.261774</td>\n",
-       "      <td>-0.545756</td>\n",
+       "      <td>1.113019</td>\n",
+       "      <td>0.030672</td>\n",
+       "      <td>-0.262045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-06</th>\n",
-       "      <td>1.352899</td>\n",
-       "      <td>0.672543</td>\n",
-       "      <td>-0.211561</td>\n",
+       "      <td>0.468949</td>\n",
+       "      <td>-1.009396</td>\n",
+       "      <td>-0.487583</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-07</th>\n",
-       "      <td>0.395342</td>\n",
-       "      <td>0.300007</td>\n",
-       "      <td>1.157092</td>\n",
+       "      <td>-0.395357</td>\n",
+       "      <td>0.599188</td>\n",
+       "      <td>-1.038343</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-08</th>\n",
-       "      <td>0.781457</td>\n",
-       "      <td>-1.404341</td>\n",
-       "      <td>0.141357</td>\n",
+       "      <td>-0.458874</td>\n",
+       "      <td>-1.032597</td>\n",
+       "      <td>0.984219</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -548,17 +548,17 @@
       ],
       "text/plain": [
        "                   A         B         C\n",
-       "2000-01-01  0.459253 -0.525373  1.124116\n",
-       "2000-01-02  0.328501  0.742063 -1.680669\n",
-       "2000-01-03  0.758567 -1.359896  0.048292\n",
-       "2000-01-04  1.553641  0.378608 -0.121617\n",
-       "2000-01-05  0.207323  1.261774 -0.545756\n",
-       "2000-01-06  1.352899  0.672543 -0.211561\n",
-       "2000-01-07  0.395342  0.300007  1.157092\n",
-       "2000-01-08  0.781457 -1.404341  0.141357"
+       "2000-01-01 -1.555927  1.824400 -0.103888\n",
+       "2000-01-02  2.493311 -2.218632 -1.834097\n",
+       "2000-01-03  0.014749 -1.324293 -1.037334\n",
+       "2000-01-04 -0.727935 -1.949508 -2.324727\n",
+       "2000-01-05  1.113019  0.030672 -0.262045\n",
+       "2000-01-06  0.468949 -1.009396 -0.487583\n",
+       "2000-01-07 -0.395357  0.599188 -1.038343\n",
+       "2000-01-08 -0.458874 -1.032597  0.984219"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,19 +569,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<PandasArray>\n",
-       "[-1.4056026131406136, -0.8979355707620631, -0.6608851917837442,\n",
-       "  1.7554166511625455,  0.1488278821131381]\n",
+       "[ 0.6605811171703322, 0.09753942253614906,  0.4117229849406213,\n",
+       " -1.2141952525365853,  1.5382955982354862]\n",
        "Length: 5, dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
        "Length: 5, dtype: object"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,16 +614,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1.40560261, -0.89793557, -0.66088519,  1.75541665,  0.14882788])"
+       "array([ 0.66058112,  0.09753942,  0.41172298, -1.21419525,  1.5382956 ])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,16 +634,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1.40560261, -0.89793557, -0.66088519,  1.75541665,  0.14882788])"
+       "array([ 0.66058112,  0.09753942,  0.41172298, -1.21419525,  1.5382956 ])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
        "dtype: datetime64[ns, CET]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
        "      dtype='datetime64[ns]')"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,29 +728,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.4592529 , -0.52537306,  1.12411646],\n",
-       "       [ 0.32850105,  0.74206298, -1.68066942],\n",
-       "       [ 0.75856694, -1.35989607,  0.04829201],\n",
-       "       [ 1.55364104,  0.37860846, -0.12161711],\n",
-       "       [ 0.20732289,  1.26177426, -0.54575618],\n",
-       "       [ 1.35289881,  0.67254321, -0.21156091],\n",
-       "       [ 0.39534179,  0.30000683,  1.15709185],\n",
-       "       [ 0.78145733, -1.40434141,  0.14135733]])"
+       "array([[-1.55592667,  1.82439962, -0.1038883 ],\n",
+       "       [ 2.49331091, -2.21863156, -1.83409701],\n",
+       "       [ 0.01474852, -1.32429338, -1.0373337 ],\n",
+       "       [-0.72793537, -1.94950773, -2.32472689],\n",
+       "       [ 1.11301925,  0.030672  , -0.26204463],\n",
+       "       [ 0.46894915, -1.00939615, -0.48758306],\n",
+       "       [-0.39535657,  0.59918809, -1.03834252],\n",
+       "       [-0.45887431, -1.03259664,  0.98421918]])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accelerated operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option(\"compute.use_bottleneck\",False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option(\"compute.use_numexpr\",False)"
    ]
   },
   {
