--- a/100004-必会函数.ipynb
+++ b/100004-必会函数.ipynb
@@ -793,17 +793,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 102,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df = pd.DataFrame({\"one\":pd.Series(np.random.randn(3), index=[\"a\",\"b\",\"c\"]),\"two\":pd.Series(np.random.randn(4), index=[\"a\",\"b\",\"c\",\"d\"]),\"three\":pd.Series(np.random.randn(3), index=[\"b\",\"c\",\"d\"]),})"
+    "DataFrame有add（）、sub（）、mul（）、div（）方法和相关函数radd（）、rsub（）、…   \n",
+    "用于执行二进制操作。对于广播行为，序列输入是最重要的。   \n",
+    "使用这些函数，您可以使用来通过axis关键字匹配索引或列："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({\"one\":pd.Series([1,2,3], index=[\"a\",\"b\",\"c\"]),\"two\":pd.Series([2,3,4,4], index=[\"a\",\"b\",\"c\",\"d\"]),\"three\":pd.Series([3,2,5], index=[\"b\",\"c\",\"d\"]),})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -835,41 +844,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
-       "      <td>-0.433831</td>\n",
-       "      <td>-1.066155</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
-       "      <td>1.192645</td>\n",
-       "      <td>0.420367</td>\n",
-       "      <td>0.111567</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>c</th>\n",
-       "      <td>0.144499</td>\n",
-       "      <td>0.541341</td>\n",
-       "      <td>0.813573</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>d</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.237560</td>\n",
-       "      <td>-0.655177</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        one       two     three\n",
-       "a -0.433831 -1.066155       NaN\n",
-       "b  1.192645  0.420367  0.111567\n",
-       "c  0.144499  0.541341  0.813573\n",
-       "d       NaN  0.237560 -0.655177"
+       "   one  two  three\n",
+       "a  1.0    2    NaN\n",
+       "b  2.0    3    3.0\n",
+       "c  3.0    4    2.0\n",
+       "d  NaN    4    5.0"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,28 +889,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
-    "row = df.iloc[1]"
+    "row = df.iloc[1] #取第二行"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "one      1.192645\n",
-       "two      0.420367\n",
-       "three    0.111567\n",
+       "one      2.0\n",
+       "two      3.0\n",
+       "three    3.0\n",
        "Name: b, dtype: float64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,29 +921,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
-    "column = df[\"two\"]"
+    "column = df[\"two\"] #取第二列"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "a   -1.066155\n",
-       "b    0.420367\n",
-       "c    0.541341\n",
-       "d    0.237560\n",
-       "Name: two, dtype: float64"
+       "a    2\n",
+       "b    3\n",
+       "c    4\n",
+       "d    4\n",
+       "Name: two, dtype: int64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -977,52 +986,52 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
-       "      <td>-1.626476</td>\n",
-       "      <td>-1.486522</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>c</th>\n",
-       "      <td>-1.048146</td>\n",
-       "      <td>0.120974</td>\n",
-       "      <td>0.702005</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>d</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>-0.182807</td>\n",
-       "      <td>-0.766744</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        one       two     three\n",
-       "a -1.626476 -1.486522       NaN\n",
-       "b  0.000000  0.000000  0.000000\n",
-       "c -1.048146  0.120974  0.702005\n",
-       "d       NaN -0.182807 -0.766744"
+       "   one  two  three\n",
+       "a -1.0 -1.0    NaN\n",
+       "b  0.0  0.0    0.0\n",
+       "c  1.0  1.0   -1.0\n",
+       "d  NaN  1.0    2.0"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.sub(row, axis=\"columns\")"
+    "df.sub(row, axis=\"columns\") #用df逐行减去row,如df的第一行a 1.0 2 NaN 减去row的2.0 3.0 3.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1054,41 +1063,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
-       "      <td>-1.626476</td>\n",
-       "      <td>-1.486522</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>c</th>\n",
-       "      <td>-1.048146</td>\n",
-       "      <td>0.120974</td>\n",
-       "      <td>0.702005</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>d</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>-0.182807</td>\n",
-       "      <td>-0.766744</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        one       two     three\n",
-       "a -1.626476 -1.486522       NaN\n",
-       "b  0.000000  0.000000  0.000000\n",
-       "c -1.048146  0.120974  0.702005\n",
-       "d       NaN -0.182807 -0.766744"
+       "   one  two  three\n",
+       "a -1.0 -1.0    NaN\n",
+       "b  0.0  0.0    0.0\n",
+       "c  1.0  1.0   -1.0\n",
+       "d  NaN  1.0    2.0"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1131,41 +1140,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
-       "      <td>0.632324</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
-       "      <td>0.772278</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-0.308800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>c</th>\n",
-       "      <td>-0.396842</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.272232</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>d</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.892737</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        one  two     three\n",
-       "a  0.632324  0.0       NaN\n",
-       "b  0.772278  0.0 -0.308800\n",
-       "c -0.396842  0.0  0.272232\n",
-       "d       NaN  0.0 -0.892737"
+       "   one  two  three\n",
+       "a -1.0    0    NaN\n",
+       "b -1.0    0    0.0\n",
+       "c -1.0    0   -2.0\n",
+       "d  NaN    0    1.0"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1208,47 +1217,92 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
-       "      <td>0.632324</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
-       "      <td>0.772278</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-0.308800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>c</th>\n",
-       "      <td>-0.396842</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.272232</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>d</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.892737</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        one  two     three\n",
-       "a  0.632324  0.0       NaN\n",
-       "b  0.772278  0.0 -0.308800\n",
-       "c -0.396842  0.0  0.272232\n",
-       "d       NaN  0.0 -0.892737"
+       "   one  two  three\n",
+       "a -1.0    0    NaN\n",
+       "b -1.0    0    0.0\n",
+       "c -1.0    0   -2.0\n",
+       "d  NaN    0    1.0"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.sub(column, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DataFrame.sub(other, axis='columns', level=None, fill_value=None) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "获取DataFrame和其他元素的减法（二进制运算符sub）。  \n",
+    "与等效，但支持用fill_value替换输入之一中的丢失数据。rsub是反向版本。dataframe - other  \n",
+    "在灵活的包装器（add，sub，mul，div，mod，pow）中使用算术运算符：+，-，*，/，//，％，**。  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color='red'><strong>\n",
+    "axis ：{0 或‘index’, 1 或‘columns’}\n",
+    "是按索引(0或' index ')还是按列(1或' columns ')进行比较。\n",
+    "对于Series输入，轴匹配Series索引。\n",
+    "</strong></font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "level ：int 或 label 跨级别广播，匹配通过的多索引级别上的索引值。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "fill_value ：float 或 None, 默认为 None\n",
+    "在计算之前，用这个值填充现有的NaN值，\n",
+    "以及成功的DataFrame对齐所需的任何新元素。\n",
+    "如果两个对应的DataFrame位置中的数据丢失，\n",
+    "则结果将丢失。"
    ]
   },
   {
